# TaskFence

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUPPORT.md
.codex/skills/commercial-ui-constraints/: SKILL.md
.codex/skills/commercial-ui-constraints/agents/: openai.yaml
.codex/skills/decision-log-policy/: SKILL.md
.codex/skills/dependency-source-policy/agents/: openai.yaml
.codex/skills/generated-artifact-policy/: SKILL.md
.codex/skills/managed-project-dev-flow/: SKILL.md
.codex/skills/managed-project-lifecycle/: SKILL.md
.codex/skills/secret-safety-policy/: SKILL.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_issue.yml  feature_request.yml  support_question.yml
.github/workflows/: ci.yml
crates/taskfence-agent/: Cargo.toml
crates/taskfence-agent/src/: lib.rs
crates/taskfence-approval/: Cargo.toml
crates/taskfence-approval/src/: lib.rs
crates/taskfence-artifacts/: Cargo.toml
crates/taskfence-artifacts/src/: lib.rs
crates/taskfence-audit/: Cargo.toml
crates/taskfence-audit/src/: lib.rs
crates/taskfence-cli/: Cargo.toml
crates/taskfence-cli/src/: main.rs
crates/taskfence-config/: Cargo.toml
crates/taskfence-config/src/: lib.rs
crates/taskfence-core/: Cargo.toml
crates/taskfence-core/src/: lib.rs
crates/taskfence-gateway/: Cargo.toml
crates/taskfence-gateway/src/: lib.rs
crates/taskfence-policy/: Cargo.toml
crates/taskfence-policy/src/: lib.rs
crates/taskfence-report/: Cargo.toml
crates/taskfence-report/src/: lib.rs
crates/taskfence-runner/: Cargo.toml
crates/taskfence-runner/src/: lib.rs
crates/taskfence-runner/tests/: docker_integration.rs
crates/taskfence-state/: Cargo.toml
crates/taskfence-state/src/: lib.rs
crates/taskfence-testkit/: Cargo.toml
crates/taskfence-testkit/fixtures/report/: basic.md
crates/taskfence-testkit/src/: lib.rs
deploy/: manage.sh
docs/: README.md  architecture.md  cli-reference.md  community-triage.md  development-design.md  installation.md  maintainers.md  positioning.md  publication-readiness.md  quickstart.md  release-notes-template.md  release.md  requirements.md  roadmap.md  security-model.md  supply-chain.md  task-file-reference.md  testing.md  troubleshooting.md  versioning.md
docs/codex/: project-structure.md  runtime-architecture.md  structure-contract.md
docs/codex/plan_archived/: 2026-06-06-local-runner-development.md  2026-06-07-budget-policy.md  2026-06-07-denied-action-evidence.md  2026-06-07-gateway-adapter-stubs.md  2026-06-07-gateway-approval-mediation.md  2026-06-07-gateway-execution-foundation.md  2026-06-07-gateway-secret-broker-contract.md  2026-06-07-local-approval-detail.md  2026-06-07-local-approval-list.md  2026-06-07-local-external-approval.md  2026-06-07-local-interactive-approval.md  2026-06-07-local-task-artifacts.md  2026-06-07-local-task-compare.md  2026-06-07-local-task-detail.md  2026-06-07-local-task-diff.md  2026-06-07-local-task-events.md  2026-06-07-local-task-inputs.md  2026-06-07-local-task-list.md  2026-06-07-local-task-query.md  2026-06-07-local-task-status.md  2026-06-07-remaining-capability-roadmap.md  2026-06-07-task-init-scaffold.md  2026-06-07-task-validate-command.md  2026-06-07-tool-policy-evidence.md  2026-06-07-tool-registry-contract.md  2026-06-08-production-readiness-plan.md  2026-06-08-remaining-capability-implementation.md  2026-06-09-cli-task-reference.md  2026-06-09-open-source-maturity.md  2026-06-09-rustdoc-release-gate.md  2026-06-09-security-compatibility.md  2026-06-09-testing-strategy.md
docs/codex/plans/: 2026-06-07-remaining-capability-roadmap.md  2026-06-08-production-readiness-plan.md  2026-06-08-remaining-capability-implementation.md  2026-06-09-open-source-maturity.md
docs/config/: cross-platform-ops.md  env-inventory.md  readiness-checklist.md
docs/decisions/: 2026-06-06-governance-python-runtime.md  2026-06-07-agent-facing-gateway-spool-boundary.md  2026-06-07-bounded-gateway-budget-metering.md  2026-06-07-bounded-github-rest-connector.md  2026-06-07-budget-policy-default-deny.md  2026-06-07-expanded-runner-capability-contracts.md  2026-06-07-gateway-tool-registry-contract.md  2026-06-07-local-external-approval.md  2026-06-07-local-gateway-execution-boundary.md  2026-06-07-local-review-replay-foundation.md  2026-06-08-bounded-local-replay-execution.md  2026-06-08-enterprise-connector-contracts.md  2026-06-08-live-enterprise-connectors-audit-export.md  2026-06-08-local-gateway-egress-boundary.md  2026-06-08-local-state-api-index.md  2026-06-08-persistent-team-state-boundary.md  2026-06-08-policy-language-versioning.md  2026-06-08-remote-ssh-runner-boundary.md  2026-06-08-specialized-agent-adapter-boundary.md  2026-06-08-team-server-foundation-contract.md  2026-06-09-codeowners-review-routing.md  2026-06-09-dependabot-security-settings.md  2026-06-09-installation-distribution-boundary.md  2026-06-09-locked-package-gate.md  2026-06-09-markdown-link-release-gate.md  2026-06-09-open-source-release-boundary.md  2026-06-09-publication-readiness-boundary.md  2026-06-09-release-notes-template.md  2026-06-09-rustdoc-release-gate.md  2026-06-09-security-model-and-compatibility.md  2026-06-09-testing-strategy.md  2026-06-14-community-triage-boundary.md  README.md
examples/: README.md  codex-cli-task.yaml  enterprise-connectors-task.yaml  github-rest-task.yaml  remote-ssh-task.yaml  task.yaml
examples/repo/: README.md
examples/repo/fixtures/: github.json
governance/: README.md  bundles.toml  change-map.md  modules.toml  profile.toml  skill-maintenance.md  skill-routing.toml
governance/core/agent/: governance-standard.md
governance/private/agent/: project-governance.md
scripts/docs/: check_markdown_links.py
scripts/governance/: build_agents.py  check_agent_assets.py  check_codex_governance.py  check_live_doc_paths.py
scripts/system/: run_io_limited.sh
scripts/test/: run_io_limited.sh
(+18 files in other folders)
