[workspace]
resolver = "2"
members = [
  "crates/taskfence-agent",
  "crates/taskfence-approval",
  "crates/taskfence-artifacts",
  "crates/taskfence-audit",
  "crates/taskfence-cli",
  "crates/taskfence-config",
  "crates/taskfence-core",
  "crates/taskfence-gateway",
  "crates/taskfence-policy",
  "crates/taskfence-report",
  "crates/taskfence-runner",
  "crates/taskfence-state",
  "crates/taskfence-testkit",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/taskfence/taskfence"
rust-version = "1.78"

[workspace.dependencies]
camino = { version = "1.1", features = ["serde1"] }
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3.10"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
tokio = { version = "1.37", features = ["io-util", "macros", "process", "rt-multi-thread", "time"] }
uuid = { version = "1.8", features = ["serde", "v4", "v7"] }

taskfence-agent = { path = "crates/taskfence-agent" }
taskfence-approval = { path = "crates/taskfence-approval" }
taskfence-artifacts = { path = "crates/taskfence-artifacts" }
taskfence-audit = { path = "crates/taskfence-audit" }
taskfence-config = { path = "crates/taskfence-config" }
taskfence-core = { path = "crates/taskfence-core" }
taskfence-gateway = { path = "crates/taskfence-gateway" }
taskfence-policy = { path = "crates/taskfence-policy" }
taskfence-report = { path = "crates/taskfence-report" }
taskfence-runner = { path = "crates/taskfence-runner" }
taskfence-state = { path = "crates/taskfence-state" }
taskfence-testkit = { path = "crates/taskfence-testkit" }
