[workspace]
resolver = "2"
members = [
  "crates/taskfence-agent",
  "crates/taskfence-approval",
  "crates/taskfence-artifacts",
  "crates/taskfence-audit",
  "crates/taskfence-cli",
  "crates/taskfence-config",
  "crates/taskfence-core",
  "crates/taskfence-gateway",
  "crates/taskfence-policy",
  "crates/taskfence-report",
  "crates/taskfence-runner",
  "crates/taskfence-state",
  "crates/taskfence-testkit",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/skz7s/TaskFence"
rust-version = "1.88"
homepage = "https://github.com/skz7s/TaskFence"
documentation = "https://github.com/skz7s/TaskFence/tree/main/docs"
readme = "README.md"
keywords = ["ai", "agents", "sandbox", "policy", "gateway"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
camino = { version = "1.1", features = ["serde1"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
postgres = "0.19"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
tokio = { version = "1.37", features = ["io-util", "macros", "process", "rt-multi-thread", "time"] }
ureq = { version = "2.12", features = ["json"] }
uuid = { version = "1.8", features = ["serde", "v4", "v7"] }

taskfence-agent = { version = "0.1.0", path = "crates/taskfence-agent" }
taskfence-approval = { version = "0.1.0", path = "crates/taskfence-approval" }
taskfence-artifacts = { version = "0.1.0", path = "crates/taskfence-artifacts" }
taskfence-audit = { version = "0.1.0", path = "crates/taskfence-audit" }
taskfence-config = { version = "0.1.0", path = "crates/taskfence-config" }
taskfence-core = { version = "0.1.0", path = "crates/taskfence-core" }
taskfence-gateway = { version = "0.1.0", path = "crates/taskfence-gateway" }
taskfence-policy = { version = "0.1.0", path = "crates/taskfence-policy" }
taskfence-report = { version = "0.1.0", path = "crates/taskfence-report" }
taskfence-runner = { version = "0.1.0", path = "crates/taskfence-runner" }
taskfence-state = { version = "0.1.0", path = "crates/taskfence-state" }
taskfence-testkit = { version = "0.1.0", path = "crates/taskfence-testkit" }
