[package]
name = "taskfence-approval"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Approval records, resolution, and fail-closed local approval flows for TaskFence."
keywords.workspace = true
categories.workspace = true

[dependencies]
camino.workspace = true
serde_json.workspace = true
taskfence-core.workspace = true
time.workspace = true

[dev-dependencies]
tempfile.workspace = true
