[package]
name = "taskfence-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
camino.workspace = true
serde.workspace = true
serde_yaml.workspace = true
taskfence-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
thiserror.workspace = true
