[package]
name = "taskfence-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Task file parsing, schema validation, and path resolution for TaskFence."
keywords.workspace = true
categories.workspace = true

[dependencies]
camino.workspace = true
serde.workspace = true
serde_yaml.workspace = true
taskfence-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
thiserror.workspace = true
