[package]
name = "taskfence-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Shared domain types, errors, and orchestration contracts for TaskFence."
keywords.workspace = true
categories.workspace = true

[dependencies]
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
