[package]
name = "taskfence-gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
camino.workspace = true
serde_json.workspace = true
taskfence-core.workspace = true
time.workspace = true

[dev-dependencies]
taskfence-policy.workspace = true
