[package]
name = "taskfence-gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
taskfence-core.workspace = true
time.workspace = true
ureq.workspace = true

[dev-dependencies]
tempfile.workspace = true
taskfence-policy.workspace = true
