[package]
name = "taskfence-gateway"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Gateway connector mediation, tool registry, and secret brokering for TaskFence."
keywords.workspace = true
categories.workspace = true

[dependencies]
base64.workspace = true
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
postgres.workspace = true
taskfence-core.workspace = true
time.workspace = true
ureq.workspace = true

[dev-dependencies]
tempfile.workspace = true
taskfence-policy.workspace = true
