[package]
name = "taskfence-policy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Fail-closed policy decisions for TaskFence paths, commands, network, tools, and budgets."
keywords.workspace = true
categories.workspace = true

[dependencies]
camino.workspace = true
globset.workspace = true
serde.workspace = true
taskfence-core.workspace = true
