[package]
name = "taskfence-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Sandbox runner planning and execution backends for TaskFence."
keywords.workspace = true
categories.workspace = true

[dependencies]
camino.workspace = true
taskfence-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
