[package]
name = "taskfence-state"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
postgres.workspace = true
sha2.workspace = true
taskfence-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
time.workspace = true
