[package]
name = "taskfence-testkit"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Test fakes and fixtures for TaskFence crates."
keywords.workspace = true
categories.workspace = true

[dependencies]
camino.workspace = true
taskfence-core.workspace = true
taskfence-runner.workspace = true
time.workspace = true
